test/chainsaw/tests/aim-gpu/regression/models.yaml
models:
  - image: ghcr.io/silogen/aim-openai-gpt-oss-20b:0.9.0-rc2
  - image: amdenterpriseai/aim-meta-llama-llama-3-2-1b-instruct:0.8.4
