test/chainsaw/tests/aim-gpu/regression/secret-imagepull.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ghcr-pull-secret
type: kubernetes.io/dockerconfigjson
stringData:
  .dockerconfigjson: ($values.imagePullSecret)
